res/roketi.less
@import "bootstrap-3.0.0/less/bootstrap.less";


@container-lg-desktop:        ((960px + @grid-gutter-width));

@font-size-base: 17px;
@body-bg: #2b2b2b;
@brand-primary: #f6bf00;

@text-color: #dcdcda;

@navbar-inverse-bg: @body-bg;

@font-family-sans-serif: 'Dosis', sans-serif;


@font-face {
	font-family: "Socialico";
	font-style: normal;
	font-weight: normal;
	src: url("/res/fonts/Socialico.ttf") format("truetype");
}

h2 {
	color: @brand-primary;
	font-size: 1.7 * @font-size-base;
}
h3 {
	font-size: 1.4 * @font-size-base;
}
bold {
	font-weight: bold;
	color: @brand-primary;
}


.navbar-brand {
	padding: 0;
}

.navbar-collapse {
	padding-top: 15px;

	ul.nav {
		margin-left: 20px;
	}
}


#moodImage {
	padding: 0;
	img {
		z-index: 0;
		width: 100%;
	}
}

.dark {
	background-color: darken(@body-bg, 13%);
}

.light {
	background-color: lighten(@body-bg, 15%);
}

.white {
	background-color: lighten(@body-bg, 35%);
}


.row {
	padding: 20px 0;
}


.team-member {
	min-height: 392px;
	font-size: 90%;
	background-color: #fff;
	text-align: center;
	width: 100%;
	padding-bottom: 0.2em;
	img {
		width: 100%;
	}
	h2 {
		margin-top: 10px;
		margin-bottom: 10px;
	}

	.position {
		background-color: @brand-primary;
		color: #fff;
		display: inline-block;
		padding: 3px 5px;
		text-transform: uppercase;
	}

	ul {
		padding-left: 0;
		margin: 0;
	}

	.ico {
		color: #999;
		font-family: "Socialico";
		font-size: 50px;
		font-style: normal;
		font-weight: 400;
		text-decoration: none;
		transition: all 0.5s ease-in-out 0s;
	}
	.ico:hover {
		color: #000;
	}
	a {
		color: #999;
	}
	a:hover {
		text-decoration: none;
		color: #000;
	}
}



footer {
	padding: 20px 0;
	text-align: center;
}


/* MailChimp */
#mc_embed_signup {
	clear:left;

	input.email {
		margin-top: 1.5em;
		margin-bottom: 1em;
	}

	.btn {
		background-color: @brand-primary;
		font-weight: bold;
	}
}

